# forge-core

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  login.tsx  main.tsx  supabase.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analyzer.rs  benchmark.rs  history.rs  lib.rs  main.rs  models.rs  monitor.rs
src/components/: Dashboard.tsx  Screens.tsx  Sidebar.tsx
src/hooks/: useMonitor.ts
src/types/: index.ts
