[package]
name = "forge-software"
version = "0.1.0"
description = "A Tauri App"
authors = ["Renan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "forge_software_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30" 
nvml-wrapper = "0.10.0"
wmi = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"
tokio = { version = "1.36", features = ["rt", "rt-multi-thread"] }
env_logger = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
